--- a/index.html
+++ b/index.html
@@ -87,33 +87,45 @@
 
   <section class="hero-part">
     <div class="container">
-      <div class="row">
-
+      <div class="hero-main row middle">
         <div class="col-7">
-          <h2 class="hero-title">Hay, I am Arun</h2>
-          <p class="hero-text">An architect, software developer, YouTuber and keynote speaker. On this site I write
-            about my learning and experience.
-          </p>
+          <div class="hero-desc">
+            <h2 class="hero-title">Hay, I am Arun</h2>
+            <p class="hero-text">An architect, software developer, YouTuber and keynote speaker. On this site I write
+              about my learning and experience.
+            </p>
 
-          <div class="hero-email-box">
-            <form>
-              <label for="email">
-                <input type="email" id="email" placeholder="Your email address" required>
-              </label>
-              <button type="submit">Subscribe</button>
-            </form>
+            <div class="hero-email-box">
+              <form>
+                <label for="email">
+                  <input class="input-email" type="email" id="email" placeholder="Your email address" required>
+                </label>
+                <button class="hero-btn" type="submit">Subscribe</button>
+              </form>
+            </div>
+            <ul class="hero-list row middle">
+              <li class="hero-item">
+                <p>Follow:</p>
+              </li>
+              <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-twitter icon-socical'></i></a></li>
+              <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-facebook icon-socical'></i></a></li>
+              <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-instagram icon-socical'></i></a></li>
+              <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-github icon-socical'></i></a></li>
+            </ul>
           </div>
-          <ul class="hero-list row middle">
-            <li class="hero-item">
-              <p>Follow:</p>
-            </li>
-            <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-twitter socical'></i></a></li>
-            <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-facebook socical'></i></a></li>
-            <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-instagram socical'></i></a></li>
-            <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-github socical'></i></a></li>
-          </ul>
         </div>
-
+        <div class="col-5">
+          <div class="hero-img">
+            <img src="imgs/arun-ray.jpg" alt="arun-ray" width="400" height="500">
+          </div>
+        </div>
+        <div class="hero-radius"></div>
+        <div class="radius-three"></div>
+        <div class="radius-one"></div>
+        <div class="radius-two"></div>
+        <div class="hero-radius2"></div>
+        <div class="radius-four"></div>
+        <div class="radius-five"></div>
       </div>
     </div>
   </section>
@@ -126,18 +138,258 @@
 
   <main>
 
+    <section class="main-posts">
+      <div class="container">
+        <div class="main-posts-part">
+          <h2 class="main-posts-title">Featured posts</h2>
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+        </div>
+
+        <div class="main-posts-part">
+          <h2 class="main-posts-title">Featured posts</h2>
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+          <div class="main-posts-plan-box row">
+            <div class="main-plan-main">
+
+              <h2 class="main-plan-title">
+                Subscribe to premium membership plan
+              </h2>
+              <p class="main-plan-text">Get access to all premium content and enjoy reading without any distraction
+              </p>
+              <a class="main-plan-link" href="#">Compare plan<i
+                  class='bx bx-arrow-back bx-flip-horizontal icon-left'></i></a>
+            </div>
+            <div class="main-plan-box">
+              <h3 class="main-plan-subtitle">yelary</h3>
+              <p class="main-plan-pricing"><span class="main-plan-pricing-span">$</span> 50</p>
+              <span class="main-plan-save">Save 17%</span>
+              <button class="main-plan-btn" type="button">Subscribe now</button>
+            </div>
+            <div class="main-plan-box">
+              <h3 class="main-plan-subtitle">monthly</h3>
+              <p class="main-plan-pricing buttom"><span class="main-plan-pricing-span">$</span> 5</p>
+
+              <button class="main-plan-btn" type="button">Subscribe now</button>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+
+          <div class="main-posts-box row">
+            <div class="main-posts-img">
+              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+            </div>
+            <div class="main-posts-main">
+              <span class="main-posts-sections">Lifestyle</span>
+              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
+                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
+              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+            </div>
+          </div>
+          <button class="plan-more-btn" type="button">Show more posts</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="main-posts-plan-box">
+          <div class="main-message-img">
+            <img src="imgs/message-icon.svg" alt="message-icon" width="120" height="54">
+          </div>
+            <h2 class="main-message-title">Subscribe to newsletter
+            </h2>
+            <p class="main-message-text">Stay up to date! Get all the latest posts delivered straight to your inbox.
+            </p>
+            <div class="main-message-inputbox">
+              <form action="">
+                <label for="name">
+                  <input class="input-name" type="name" id="name" placeholder="Your name">
+                </label>
+                <label for="email">
+                  <input class="input-mail" type="email" name="email" id="email" placeholder="Your email address">
+                </label>
+                <button class="main-message-submit" type="submit">Subscribe</button>
+              </form>
+            </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- MAIN PART END -->
 
   <!-- FOOTER PART -->
 
-  <footer>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
 
-  </footer>
+        <div class="footer-main">
+          <div class="footer-logo">
+            <img src="imgs/footer-logo.svg" alt="logo" width="101" height="32">
+          </div>
+          <p class="footer-copyright">An architect, software developer, YouTuber and keynote speaker. On this site I write about my learning and experience.</p>
+        </div>
+        <nav class="footer-nav row">
+          <ul class="footer-list">
+            <li class="footer-item">features</li>
+            <li class="footer-item"><a class="footer-link" href="#">elements</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">tags</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">authore</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">404 page</a></li>
+          </ul>
 
-  <!-- FOOTER PART END -->
+          <ul class="footer-list">
+            <li class="footer-item">members</li>
+            <li class="footer-item"><a class="footer-link" href="#">membership</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">sign in</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">sign up</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">Account</a></li>
+          </ul>
 
-</body>
+          <ul class="footer-list">
+            <li class="footer-item">about</li>
+            <li class="footer-item"><a class="footer-link" href="#">tag page</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">author page</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">contact</a></li>
+            <li class="footer-item"><a class="footer-link" href="#">privacy</a></li>
+          </ul>
+        </nav>
+      </div>
 
-</html>
+      <div class="footer-end row between">
+
+        <ul class="hero-list row middle">
+          <li class="hero-item">
+            <p>Follow:</p>
+          </li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-twitter icon-socical'></i></a></li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-facebook icon-socical'></i></a></li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-instagram icon-socical'></i></a></li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-github icon-socical'></i></a></li>
+        </ul>
+
+        <p class="footer-copy">
+          © 2022 Arun Roy - All right Reserved. Published with Ghost
+        </p>
+      </div>
+      </div>
+    </footer>
+
+    <!-- FOOTER PART END -->
+
+  </body>
+
+  </html>
