--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <div class="container">
       <div class="header-main row middle">
         <div class="header-logo">
-          <a href="#"><img src="imgs/logo.svg" alt="logo" width="126" height="39"></a>
         </div>
         <nav class="header-nav row">
           <ul class="header-nav-list row middle">
@@ -48,13 +47,14 @@
             <li class="header-nav-item"><a class="header-nav-btn-link" href="#">sign up</a></li>
             <li class="header-nav-item" id="id-search"><i class='bx bx-search'></i>
             </li>
-            <li class="header-nav-item"><i class='bx bx-moon'></i></li>
+            <li class="header-nav-item" id="id-dark"><div class='bx-mon'></div></li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
   <!-- HEADER PART END -->
+
 
   <div class="modal-box" id="id-modalbox">
     <div class="container">
@@ -157,43 +157,44 @@
 
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/timur-romanov2.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections">Health</span>
+              <h3 class="main-posts-subtitle">The mind and body are not separate. what affects one, affects the other</h3>
+              <p class="main-posts-text">his recital put the Captain into an ecstasy; he went from the lady to the gentleman, and from the gentleman to the lady, to enjoy alternately the sight of their distress...</p>
+              <time class="main-posts-time">Mar 28, 2021 3 min read Paid</time>
             </div>
           </div>
         </div>
 
         <div class="main-posts-part">
-          <h2 class="main-posts-title">Featured posts</h2>
+          <h2 class="main-posts-title">Latest posts</h2>
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/kaizen-3.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections">Nature</span>
+              <h3 class="main-posts-subtitle">Autumn is a second spring when every leaf is a flower</h3>
+              <p class="main-posts-text">She then expatiated very warmly upon the advantages I should reap from her plan; talked in a high style of my future grandeur; assured me how heartily I should...</p>
+              <time class="main-posts-time">May 02, 2021 4 min read Public</time>
             </div>
           </div>
 
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/mirna-3.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections redline">Travel</span>
+              <h3 class="main-posts-subtitle">
+                Never let your memories be greater than your dreams
+                Travel
+                Never let your memories be greater than your dreams</h3>
+              <p class="main-posts-text">Before long the searchlight discovered some distance away a schooner with all sails set, apparently the same vessel which had been noticed earlier in the evening. The...</p>
+              <time class="main-posts-time">May 02, 2021 4 min read Members
+              </time>
             </div>
           </div>
           <div class="main-posts-plan-box row">
@@ -223,14 +224,14 @@
 
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/louis-4.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections rozviy">Food</span>
+              <h3 class="main-posts-subtitle">Dramatically improve your cooking using just your imagination</h3>
+              <p class="main-posts-text">You cannot too assiduously attend to Madame Duval herself; but I would wish you to mix as little as possible with her associates, who are not likely to be among those...</p>
+              <time class="main-posts-time">May 02, 2021 4 min read Paid
+              </time>
             </div>
           </div>
 
@@ -249,53 +250,55 @@
 
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/jean-5.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections yellow">Inspiration</span>
+              <h3 class="main-posts-subtitle">It is during our darkest moments that we must focus to see the light</h3>
+              <p class="main-posts-text">Mina took a growing interest in everything and I was rejoiced to see that the exigency of affairs was helping her to forget for a time the terrible experience of the night. She was very, very pale
+                ...</p>
+              <time class="main-posts-time">Apr 24, 2021 3 min read Public
+              </time>
             </div>
           </div>
 
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/unsplash-6.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections green">Technology</span>
+              <h3 class="main-posts-subtitle">Bangladesh has developed plastic alternative using jute</h3>
+              <p class="main-posts-text">Dr. Johnson, as usual, spoke contemptuously of Colley Cibber. 'It is wonderful that a man, who for forty years had lived with the great and the witty, should have acquired so ill the talents of conversation: and he had but half to furnish; for one half of what he said was oaths.
+                ...</p>
+              <time class="main-posts-time">Apr 18, 2021 3 min read Members
+              </time>
             </div>
           </div>
 
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/abinash-7.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections rozviy">Food</span>
+              <h3 class="main-posts-subtitle">I do not stick to rules when cooking. I rely on my imagination</h3>
+              <p class="main-posts-text">I walked down to the station with them, and then wandered through the streets of the little town, finally returning to the hotel, where I lay upon the sofa and tried to...</p>
+              <time class="main-posts-time">Apr 12, 2021 4 min read Public
+              </time>
             </div>
           </div>
 
           <div class="main-posts-box row">
             <div class="main-posts-img">
-              <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
+              <img src="imgs/timur-romanov2.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
-              <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
-                mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
-              <time class="main-posts-time">May 02, 2021 3 min read Public</time>
+              <span class="main-posts-sections">Health</span>
+              <h3 class="main-posts-subtitle">SThe mind and body are not separate. what affects one, affects the other</h3>
+              <p class="main-posts-text">his recital put the Captain into an ecstasy; he went from the lady to the gentleman, and from the gentleman to the lady, to enjoy alternately the sight of their distress.</p>
+              <time class="main-posts-time">Mar 28, 2021 3 min read Paid
+              </time>
             </div>
           </div>
           <button class="plan-more-btn" type="button">Show more posts</button>
@@ -387,6 +390,8 @@
       </div>
       </div>
     </footer>
+
+
 
     <!-- FOOTER PART END -->
 
